--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Palettes</title>
-    <link href="" rel="">
+    <link href="style.css" rel="stylesheet">
 </head>
-<body><p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium a nesciunt dolores neque repudiandae facilis corrupti sed, cupiditate exercitationem ratione voluptates maiores natus numquam cumque in magnam sequi aspernatur voluptatibus!
-</p>
-
-    
+<div class="container">
+    <div class="up"><img src="./1.GIF" alt="Aussie Palettes"> <h3>Aussie Palettes</h3> <a href="./page1.html" class="btn"> Open</a>
+    </div>
+    <div class="up"><img src="./2.GIF" alt="British Palettes"><h3>British Palettes</h3> <a href="./page2.html" class="btn"> Open</a>
+    </div>
+    <div class="up"><img src="./3.GIF" alt="Canedian Palettes"><h3>Canedian Palettes</h3> <a href="./page3.html" class="btn"> Open</a>
+    </div>
+    <div class="up"><img src="./4.GIF" alt="Chinese Palettes"><h3>Chinese Palettes</h3> <a href="./page4.html" class="btn"> Open</a>
+    </div>
+    <div class="up"><img src="./5.GIF" alt="Dutch Palettes"><h3>Dutch Palettes</h3> <a href="./page5.html" class="btn"> Open</a>
+    </div>
+    <div class="up"><img src="./6.GIF" alt="French Palettes"><h3>French Palettes</h3> <a href="./page6.html" class="btn"> Open</a>
+    </div>
+    </div>
 </body>
+
 </html>
